tests/NormalTests/paczka1/small_fuzzy/41363320.err
Error in line 8: 47mWm A140 54,3
Error in line 10: B0J A140 78,7
